@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Ubiquity Slideshow Team <ubiquity-slideshow@lists.launchpad.net>
 Build-Depends: cdbs, debhelper (>= 5)
-Build-Depends-Indep: translate-toolkit, gimp, python-utidylib
+Build-Depends-Indep: po4a, gimp, python-utidylib
 Vcs-Bzr: https://code.launchpad.net/~ubiquity-slideshow/ubiquity-slideshow-ubuntu/html
 Standards-Version: 3.8.3
 Homepage: https://launchpad.net/ubiquity-slideshow-ubuntu
